<resources>
    <string name="app_name">Grønt Lys</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="sok_spisested">Søk spisested</string>
    <string name="sok_poststed">Søk poststed</string>
    <string name="sok">Søk</string>
    <string name="sok_her">Søk i nærheten</string>
    <string name="title_sokeliste">SokelisteActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="angry_face">Angry face</string>
    <string name="neutral_face">Neutral Face</string>
    <string name="happy_face">Happy face</string>
    <string name="title_tilsyn_list">Tilsyner</string>
    <string name="title_tilsyn_detail">Tilsyn Detail</string>
    <string name="tilsynsdato">Dato for tilsyn:   </string>
    <string name="tema_1">Tema 1:</string>
    <string name="tema_2">Tema 2:</string>
    <string name="tema_3">Tema 3:</string>
    <string name="tema_4">Tema 4 :</string>
    <string name="placeholder_long">Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder</string>
    <string name="temagruppe">Temagruppe:</string>
    <string name="karaktervisning">Karaktervisning</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="lagre_favoritter">Lagre favoritter</string>
</resources>
