<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:padding="16dp">

    <ImageView
        android:id="@+id/trafikklys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:cropToPadding="false"
        android:fitsSystemWindows="false"
        android:src="@drawable/barnehage1" />


    <EditText
        android:id="@+id/spisested_sokenavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/sok_spisested"
        android:layout_below="@id/trafikklys"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/poststed_sokenavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/sok_poststed"
        android:layout_below="@id/spisested_sokenavn"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/sok_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/poststed_sokenavn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_button_sok"
        android:text="@string/sok" />

    <Button
        android:id="@+id/vis_her_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sok_knapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_button_her"
        android:text="@string/sok_her" />


</RelativeLayout>